# aemet-antartica-fetcher

./: .gitignore  README.md  justfile  pyproject.toml
aemetAntartica/aggregator/: annot.py  iteration.py
aemetAntartica/app/: __init__.py  annot.py  app.py  dependencies.py  enum.py  params.py  response.py
aemetAntartica/fetcher/: aemet.py  annot.py  context.py  exceptions.py  factories.py  factory.py  fetch_cache.py  fetch_functions.py  mock.py  model.py  sql_cache.py  static.py
aemetAntartica/model/: factory.py  fetch.py  tz_fetch.py  validation.py
aemetAntartica/util/: __init__.py  bisect.py  ctxvar.py  datetime.py  itertools.py
compose-observability/: _config.alloy  compose-influx.yaml  compose.yaml  config.alloy  mimir-config.yaml  telegraf.conf  tempo-config.yaml
compose-observability/grafana/: datasources.yaml
test/aemetAntartica/: __init__.py
test/aemetAntartica/integration/fetcher/: test_fetcher.py
test/aemetAntartica/unitary/aggregation/: test_iter_agg_calc.py  test_iter_calc.py
