[tool.poetry]
name = "aemetanartica"
version = "0.1.0"
description = ""
authors = ["fernando fernández soto <fernando.andeca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
httpx = "^0.28.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
pyright = "^1.1.390"
pytest = "^8.3.4"
hypothesis = "^6.122.3"
rich = "^13.9.4"
ipykernel = "^6.29.5"
pylint = "^3.3.2"


[tool.poetry.group.sci.dependencies]
numpy = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev="fastapi dev aemetantartica/app/app.py"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
