[tool.poetry]
name = "aemetanartica"
version = "0.1.0"
description = ""
authors = ["fernando fernández soto <fernando.andeca@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
httpx = "^0.28.1"
asyncstdlib = "^3.13.0"
structlog = "^24.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
pyright = "^1.1.390"
pytest = "^8.3.4"
hypothesis = "^6.122.3"
rich = "^13.9.4"
ipykernel = "^6.29.5"
pylint = "^3.3.2"
bandit = "^1.8.0"
mypy = "^1.13.0"
pytest-asyncio = "^0.25.0"
opentelemetry-distro = "^0.50b0"


[tool.poetry.group.sci.dependencies]
numpy = "^2.2.0"
pandas = "^2.2.3"
pyarrow = "^18.1.0"
matplotlib = "^3.10.0"


[tool.poetry.group.sqlite.dependencies]
aiosqlite = "^0.20.0"


[tool.poetry.group.instrumentation.dependencies]
opentelemetry-distro = {extras = ["otlp"], version = "^0.50b0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
